fix: :bug: fix alignment bug in contact us section form section

--- a/web/src/app/component/contact-us/contact-us-form/contact-us-form.component.scss
+++ b/web/src/app/component/contact-us/contact-us-form/contact-us-form.component.scss
@@ -13,82 +13,84 @@
       font-size: 35px;
       font-weight: 700;
       text-align: center;
-      @media(max-width:900px){
+      @media (max-width: 900px) {
         font-size: 33px;
       }
-      @media(max-width:700px){
+      @media (max-width: 700px) {
         font-size: 30px;
       }
-      @media(max-width:350px){
+      @media (max-width: 350px) {
         font-size: 27px;
       }
     }
-    h3{
-        font-size: 20px;
-        color: #616161;
-        text-align: center;
-        @media(max-width:900px){
-          font-size: 18px;
-        }
-        @media(max-width:700px){
-          font-size: 16px;
-        }
-        @media(max-width:350px){
-          font-size: 13px;
-        }
+    h3 {
+      font-size: 20px;
+      color: #616161;
+      text-align: center;
+      @media (max-width: 900px) {
+        font-size: 18px;
+      }
+      @media (max-width: 700px) {
+        font-size: 16px;
+      }
+      @media (max-width: 350px) {
+        font-size: 13px;
+      }
     }
   }
-  &-body{
+  &-body {
     display: flex;
     flex-direction: column;
     height: 60vh;
     width: 100%;
-   &-btn{
-    display: flex;
-    justify-content: center;
-   }
-    Button{
-        height: 3rem;
-        width: 20rem;
-        margin-top: 2rem;
-        border-radius: 10px;
-        border: none;
-        background-color: #DE1F1F;
-        color: white;
-        font-size: 18px;
-        font-weight: 600;
+    @media (max-width: 350px) {
+      height: 80vh;
+    }
+    &-btn {
+      display: flex;
+      justify-content: center;
+    }
+    Button {
+      height: 3rem;
+      width: 20rem;
+      margin-top: 2rem;
+      border-radius: 10px;
+      border: none;
+      background-color: #de1f1f;
+      color: white;
+      font-size: 18px;
+      font-weight: 600;
 
-        @media(max-width:900px){
-          font-size: 16px;
-        }
-        @media(max-width:700px){
-          font-size: 15px;
-          width: 100%;
-          height: 2.5rem;
-        }
-        @media(max-width:350px){
-          font-size: 13px;
-        }
-
+      @media (max-width: 900px) {
+        font-size: 16px;
+      }
+      @media (max-width: 700px) {
+        font-size: 15px;
+        width: 100%;
+        height: 2.5rem;
+      }
+      @media (max-width: 350px) {
+        font-size: 13px;
+      }
     }
   }
 }
 
-::ng-deep{
-    .mdc-line-ripple::after {
-        border-bottom-color: black !important ;
-      }
-      .mat-label {
-        color: black;
-        font-size:16px ;
-        @media (max-width: 500px) {
-          font-size: 15px;
-        }
-        @media (max-width: 350px) {
-          font-size: 13px;
-        }
-      }
-      .mat-mdc-floating-label.mdc-floating-label {
-        color: black !important;
-      }
+::ng-deep {
+  .mdc-line-ripple::after {
+    border-bottom-color: black !important ;
+  }
+  .mat-label {
+    color: black;
+    font-size: 16px;
+    @media (max-width: 500px) {
+      font-size: 15px;
+    }
+    @media (max-width: 350px) {
+      font-size: 13px;
+    }
+  }
+  .mat-mdc-floating-label.mdc-floating-label {
+    color: black !important;
+  }
 }
